<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/article_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/restaurant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_name" />

        <TextView
            android:id="@+id/restaurant_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_address" />

        <TextView
            android:id="@+id/restaurant_openinghours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_open" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.95">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/restaurant_proximity"
            android:text="@string/restaurant_distance"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="05dp"
                android:src="@drawable/ic_baseline_people_24"
                android:layout_marginHorizontal="5dp"
                android:id="@+id/restaurant_lovers_ic"
                android:contentDescription="@string/logo_colleagues"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/restaurant_lovers_nb"
                android:text="@string/restaurant_number_colleagues"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/restaurant_star"
                android:id="@+id/restaurant_star1"
                android:layout_marginTop="05dp"
                android:src="@drawable/ic_action_star"/>
            <ImageView
                android:id="@+id/restaurant_star2"
                android:contentDescription="@string/restaurant_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="05dp"
                android:src="@drawable/ic_action_star"/>
            <ImageView
                android:id="@+id/restaurant_star3"
                android:contentDescription="@string/restaurant_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="05dp"
                android:src="@drawable/ic_action_star"/>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/restaurant_photo"
        android:contentDescription="@string/restaurant_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_logo_auth"
        android:layout_margin="5dp"/>

</LinearLayout>