<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mylunch"
            android:icon="@drawable/ic_baseline_restaurant_menu_24"
            android:title="@string/your_lunch" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_baseline_chat_24"
            android:title="CHAT" />
        <item
            android:id="@+id/nav_search"
            android:title="Search by categories"
            android:icon="@drawable/ic_action_name"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_power_settings_new_24"
            android:title="@string/logout" />
    </group>
</menu>