<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".workmates_chat.ChatActivity">

    <!-- BUTTONS CHAT CONTAINER -->
    <LinearLayout
        android:id="@+id/activity_user_chat_buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <!-- BUTTON CHAT RESTAURANT -->
        <ImageButton
            android:id="@+id/activity_user_chat_restaurant_chat_button"
            android:contentDescription="@string/chat_title_restaurants"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:src="@drawable/ic_local_dining_white"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:tag="10"/>

        <!-- BUTTON CHAT GOOD TIME -->
        <ImageButton
            android:id="@+id/activity_user_chat_good_chat_button"
            android:contentDescription="@string/chat_title_good"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:src="@drawable/ic_happy"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:tag="20"/>

    </LinearLayout>


    <!-- RECYCLER VIEW CONTAINER -->
    <LinearLayout
        android:id="@+id/activity_user_chat_recycler_view_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@id/activity_user_chat_add_message_container"
        android:layout_below="@id/activity_user_chat_buttons_container">

        <!-- MESSAGE RECYCLER VIEW EMPTY -->
        <TextView
            android:id="@+id/activity_user_chat_text_view_recycler_view_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_view_user_chat_error"
            android:textAlignment="center"
            android:layout_margin="@dimen/default_large_margin"/>

        <!-- RECYCLER VIEW -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_user_chat_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <!-- ADD MESSAGE CONTAINER -->
    <LinearLayout
        android:id="@+id/activity_user_chat_add_message_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/default_margin">

        <!-- TEXT MESSAGE EDIT TEXT -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_user_chat_message_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:textSize="@dimen/default_text_size"
            android:hint="@string/text_input_title_user_chat_activity"/>

        <!-- ADD MESSAGE BUTTON -->
        <Button
            android:id="@+id/activity_user_chat_send_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_title_user_chat_activity" />

    </LinearLayout>

</RelativeLayout>